Add Mockito as agent in Java 21+