@@ -54,6 +54,7 @@
         <micrometer-tracing-test.version>1.3.4</micrometer-tracing-test.version>
         <micrometer-docs-generator.version>1.0.4</micrometer-docs-generator.version>
         <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+        <maven.dependency.plugin.version>3.8.0</maven.dependency.plugin.version>
         <maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
         <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
@@ -289,6 +290,19 @@
                         <arg>-Xlint:unchecked</arg>
                     </compilerArgs>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>${maven.dependency.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>properties</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
@@ -579,7 +593,7 @@
                 <jdk>[21,)</jdk>
             </activation>
             <properties>
-                <test-arguments>-Xshare:off -XX:+EnableDynamicAgentLoading</test-arguments>
+                <test-arguments>-Xshare:off -javaagent:${org.mockito:mockito-core:jar}</test-arguments>
             </properties>
         </profile>
 
